// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkBankAccountScreen renders correctly for each possible kycStatus renders correctly for a KycStatus of completed 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "marginHorizontal": 24,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "#EDEEEF",
            "borderBottomWidth": 1,
            "paddingVertical": 48,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 12,
            }
          }
        >
          <svg
            fill="none"
            height="60"
            style={Object {}}
            viewBox="0 0 60 60"
            width="60"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="30"
              cy="30"
              fill="#F9F6F0"
              r="30"
              style={Object {}}
            />
            <path
              d="M25.1707 29.7302C24.6542 29.2217 23.8232 29.2282 23.3146 29.7448C22.8061 30.2614 22.8127 31.0924 23.3293 31.6009L25.1707 29.7302ZM27.9167 34.2749L26.9959 35.2103C27.4994 35.7058 28.3047 35.714 28.8181 35.2288L27.9167 34.2749ZM37.1515 27.3538C37.6783 26.856 37.7018 26.0253 37.2039 25.4984C36.7061 24.9716 35.8754 24.9481 35.3485 25.446L37.1515 27.3538ZM23.3293 31.6009L26.9959 35.2103L28.8374 33.3395L25.1707 29.7302L23.3293 31.6009ZM28.8181 35.2288L37.1515 27.3538L35.3485 25.446L27.0152 33.321L28.8181 35.2288Z"
              fill="#42D689"
              style={Object {}}
            />
            <path
              d="M30 40.5C24.201 40.5 19.5 35.799 19.5 30H16.5C16.5 37.4558 22.5442 43.5 30 43.5V40.5ZM40.5 30C40.5 35.799 35.799 40.5 30 40.5V43.5C37.4558 43.5 43.5 37.4558 43.5 30H40.5ZM30 19.5C35.799 19.5 40.5 24.201 40.5 30H43.5C43.5 22.5442 37.4558 16.5 30 16.5V19.5ZM30 16.5C22.5442 16.5 16.5 22.5442 16.5 30H19.5C19.5 24.201 24.201 19.5 30 19.5V16.5Z"
              fill="#1AB775"
              style={Object {}}
            />
          </svg>
        </View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.completed.title
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.completed.description
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.label
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.title
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.description
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "marginTop": 48,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F1F0EB",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 120,
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                linkBankAccountScreen.stepTwo.cta
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`LinkBankAccountScreen renders correctly for each possible kycStatus renders correctly for a KycStatus of created 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "marginHorizontal": 24,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "#EDEEEF",
            "borderBottomWidth": 1,
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.label
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.title
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.description
        </Text>
        <View
          style={
            Object {
              "marginTop": 48,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 100,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={false}
                nativeBackgroundAndroid={
                  Object {
                    "attribute": "selectableItemBackground",
                    "rippleRadius": undefined,
                    "type": "ThemeAttrAndroid",
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#F1F0EB",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 120,
                    "opacity": undefined,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                  }
                }
                testID="PersonaButton"
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Object {
                      "color": "#9CA4A9",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    }
                  }
                >
                  linkBankAccountScreen.begin.cta
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.label
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.title
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.description
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "marginTop": 48,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={false}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F1F0EB",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 120,
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                linkBankAccountScreen.stepTwo.cta
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`LinkBankAccountScreen renders correctly for each possible kycStatus renders correctly for a KycStatus of expired 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "marginHorizontal": 24,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "#EDEEEF",
            "borderBottomWidth": 1,
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.label
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.title
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.description
        </Text>
        <View
          style={
            Object {
              "marginTop": 48,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 100,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={false}
                nativeBackgroundAndroid={
                  Object {
                    "attribute": "selectableItemBackground",
                    "rippleRadius": undefined,
                    "type": "ThemeAttrAndroid",
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#F1F0EB",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 120,
                    "opacity": undefined,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                  }
                }
                testID="PersonaButton"
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Object {
                      "color": "#9CA4A9",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    }
                  }
                >
                  linkBankAccountScreen.begin.cta
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.label
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.title
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.description
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "marginTop": 48,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={false}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F1F0EB",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 120,
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                linkBankAccountScreen.stepTwo.cta
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`LinkBankAccountScreen renders correctly for each possible kycStatus renders correctly for a KycStatus of failed 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "marginHorizontal": 24,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "#EDEEEF",
            "borderBottomWidth": 1,
            "paddingVertical": 48,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 12,
            }
          }
        >
          <svg
            fill="none"
            height="60"
            style={Object {}}
            viewBox="0 0 60 60"
            width="60"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="30"
              cy="30"
              fill="#F9F6F0"
              r="30"
              style={Object {}}
            />
            <circle
              cx="30"
              cy="30"
              r="11.25"
              stroke="#EA6042"
              stroke-width="1.5"
              style={Object {}}
            />
            <path
              d="M34.5 25.5L25.5 34.5"
              stroke="#EA6042"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              style={Object {}}
            />
            <path
              d="M34.5 34.5L25.5 25.5"
              stroke="#EA6042"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              style={Object {}}
            />
          </svg>
        </View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.failed.title
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.failed.description
        </Text>
        <View
          style={
            Object {
              "marginTop": 48,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 100,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={false}
                nativeBackgroundAndroid={
                  Object {
                    "attribute": "selectableItemBackground",
                    "rippleRadius": undefined,
                    "type": "ThemeAttrAndroid",
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#F1F0EB",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 120,
                    "opacity": undefined,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                  }
                }
                testID="PersonaButton"
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Object {
                      "color": "#9CA4A9",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    }
                  }
                >
                  linkBankAccountScreen.tryAgain
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              undefined,
              Object {
                "opacity": 1,
              },
            ]
          }
          testID="SupportContactLink"
        >
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
                "marginTop": 26,
              }
            }
          >
            contactSupport
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.label
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.title
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.description
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "marginTop": 48,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={false}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F1F0EB",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 120,
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                linkBankAccountScreen.stepTwo.cta
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`LinkBankAccountScreen renders correctly for each possible kycStatus renders correctly for a KycStatus of pending 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "marginHorizontal": 24,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "#EDEEEF",
            "borderBottomWidth": 1,
            "paddingVertical": 48,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 12,
            }
          }
        >
          <svg
            fill="none"
            height="60"
            style={Object {}}
            viewBox="0 0 60 60"
            width="60"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="30"
              cy="30"
              fill="#F9F6F0"
              r="30"
              style={Object {}}
            />
            <path
              d="M30 22.5V30H36"
              stroke="#FFA500"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              style={Object {}}
            />
            <circle
              cx="30"
              cy="30"
              r="11.25"
              stroke="#FFA500"
              stroke-width="1.5"
              style={Object {}}
            />
          </svg>
        </View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.pending.title
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.pending.description
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.label
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.title
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.description
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "marginTop": 48,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={false}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F1F0EB",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 120,
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                linkBankAccountScreen.stepTwo.cta
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`LinkBankAccountScreen renders correctly for each possible kycStatus renders correctly for a KycStatus of undefined 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "marginHorizontal": 24,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "#EDEEEF",
            "borderBottomWidth": 1,
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.label
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.title
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.description
        </Text>
        <View
          style={
            Object {
              "marginTop": 48,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 100,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={false}
                nativeBackgroundAndroid={
                  Object {
                    "attribute": "selectableItemBackground",
                    "rippleRadius": undefined,
                    "type": "ThemeAttrAndroid",
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#F1F0EB",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 120,
                    "opacity": undefined,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                  }
                }
                testID="PersonaButton"
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Object {
                      "color": "#9CA4A9",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    }
                  }
                >
                  linkBankAccountScreen.begin.cta
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.label
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.title
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.description
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "marginTop": 48,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={false}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F1F0EB",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 120,
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                linkBankAccountScreen.stepTwo.cta
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;
